# boa

./: .gitignore  LICENSE  README.md  boa.py  example.ini  pot.sh  pyproject.toml  setup.py
boa/: __init__.py  __main__.py
boa/locale/: argparse.po  argparse.pot  boa.po  boa.pot
boa/locale/ja_JP/LC_MESSAGES/: argparse.mo  argparse.po  boa.mo  boa.po
